--- a/CloudentalUtils/jasper/patient_report.jrxml
+++ b/CloudentalUtils/jasper/patient_report.jrxml
@@ -1,18 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="daily_report" language="groovy" pageWidth="595" pageHeight="842" columnWidth="555" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20" uuid="afca2a48-ea3c-4c57-8639-4e4a0aefe47a">
-	<property name="ireport.zoom" value="0.8264462809917358"/>
+<jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="daily_report" pageWidth="595" pageHeight="842" whenNoDataType="AllSectionsNoDetail" columnWidth="555" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20" uuid="afca2a48-ea3c-4c57-8639-4e4a0aefe47a">
+	<property name="ireport.zoom" value="1.1000000000000005"/>
 	<property name="ireport.x" value="0"/>
 	<property name="ireport.y" value="0"/>
-	<style name="Title" fontName="Times New Roman" fontSize="50" isBold="true" pdfFontName="Times-Bold"/>
-	<style name="SubTitle" forecolor="#736343" fontName="Arial" fontSize="18"/>
-	<style name="Column header" forecolor="#666666" fontName="Arial" fontSize="12" isBold="true"/>
-	<style name="Detail" fontName="Arial" fontSize="12"/>
-	<style name="Row" mode="Transparent">
-		<conditionalStyle>
-			<conditionExpression><![CDATA[$V{REPORT_COUNT}%2 == 0]]></conditionExpression>
-			<style backcolor="#E6DAC3"/>
-		</conditionalStyle>
-	</style>
 	<parameter name="DENTISTID" class="java.lang.Integer">
 		<defaultValueExpression><![CDATA[0]]></defaultValueExpression>
 	</parameter>
@@ -22,8 +12,7 @@ FROM Patient p
 LEFT OUTER JOIN contactInfo ci
 ON p.id = ci.id
 and ci.infotype = 0
-where p.dentistid = $P{DENTISTID}
-]]>
+where p.dentistid = $P{DENTISTID}]]>
 	</queryString>
 	<field name="id" class="java.lang.Integer"/>
 	<field name="dentistid" class="java.lang.Integer"/>
@@ -32,6 +21,10 @@ where p.dentistid = $P{DENTISTID}
 	<field name="comments" class="java.lang.String"/>
 	<field name="created" class="java.sql.Timestamp"/>
 	<field name="info" class="java.lang.String"/>
+	<variable name="PATIENT_COUNT" class="java.lang.Integer" calculation="Count">
+		<variableExpression><![CDATA[$F{id}]]></variableExpression>
+		<initialValueExpression><![CDATA[0]]></initialValueExpression>
+	</variable>
 	<group name="id">
 		<groupExpression><![CDATA[$F{id}]]></groupExpression>
 		<groupHeader>
@@ -41,7 +34,7 @@ where p.dentistid = $P{DENTISTID}
 	<title>
 		<band height="129" splitType="Stretch">
 			<staticText>
-				<reportElement uuid="5c6b2098-61e6-4281-b0e4-d5e9027c1ad9" style="Title" x="128" y="41" width="346" height="38" forecolor="#3E85B5"/>
+				<reportElement uuid="5c6b2098-61e6-4281-b0e4-d5e9027c1ad9" x="128" y="41" width="346" height="38" forecolor="#3E85B5"/>
 				<textElement verticalAlignment="Middle">
 					<font fontName="SansSerif" size="30"/>
 				</textElement>
@@ -51,10 +44,10 @@ where p.dentistid = $P{DENTISTID}
 				<reportElement uuid="5ff0045f-c716-4447-826e-ea3f05c00d9c" x="0" y="0" width="80" height="80"/>
 				<imageExpression><![CDATA["logo_cd_small.png"]]></imageExpression>
 			</image>
-			<textField pattern="dd/MM/yyyy">
+			<textField pattern="EEEEE dd MMMMM yyyy">
 				<reportElement uuid="55c528f1-2474-48eb-9ed9-363bd35e3075" x="128" y="79" width="254" height="20"/>
 				<textElement>
-					<font fontName="SansSerif" size="12" pdfEncoding="Cp1253"/>
+					<font fontName="SansSerif" size="12" pdfEncoding="Cp1252" isPdfEmbedded="false"/>
 				</textElement>
 				<textFieldExpression><![CDATA[new Date()]]></textFieldExpression>
 			</textField>
@@ -72,28 +65,28 @@ where p.dentistid = $P{DENTISTID}
 				</graphicElement>
 			</line>
 			<staticText>
-				<reportElement uuid="6a953897-9156-4e9b-94c0-aa06e8f6e36a" style="Column header" mode="Transparent" x="0" y="0" width="111" height="15" forecolor="#3E85B5" backcolor="#FFFFFF"/>
+				<reportElement uuid="6a953897-9156-4e9b-94c0-aa06e8f6e36a" mode="Transparent" x="0" y="0" width="111" height="15" forecolor="#3E85B5" backcolor="#FFFFFF"/>
 				<textElement>
 					<font fontName="SansSerif" size="10"/>
 				</textElement>
 				<text><![CDATA[name]]></text>
 			</staticText>
 			<staticText>
-				<reportElement uuid="e851a6f3-c7af-4852-aba1-d6c5d52bf5b8" style="Column header" x="111" y="0" width="111" height="15" forecolor="#3E85B5"/>
+				<reportElement uuid="e851a6f3-c7af-4852-aba1-d6c5d52bf5b8" x="111" y="0" width="111" height="15" forecolor="#3E85B5"/>
 				<textElement>
 					<font fontName="SansSerif" size="10"/>
 				</textElement>
 				<text><![CDATA[surname]]></text>
 			</staticText>
 			<staticText>
-				<reportElement uuid="bafd169c-13ab-4c7d-a124-c15f228cae9a" style="Column header" x="222" y="0" width="160" height="15" forecolor="#3E85B5"/>
+				<reportElement uuid="bafd169c-13ab-4c7d-a124-c15f228cae9a" x="222" y="0" width="160" height="15" forecolor="#3E85B5"/>
 				<textElement>
 					<font fontName="SansSerif" size="10"/>
 				</textElement>
 				<text><![CDATA[e-mail address]]></text>
 			</staticText>
 			<staticText>
-				<reportElement uuid="bafd169c-13ab-4c7d-a124-c15f228cae9a" style="Column header" x="382" y="0" width="160" height="15" forecolor="#3E85B5"/>
+				<reportElement uuid="bafd169c-13ab-4c7d-a124-c15f228cae9a" x="382" y="0" width="160" height="15" forecolor="#3E85B5"/>
 				<textElement>
 					<font fontName="SansSerif" size="10"/>
 				</textElement>
@@ -104,28 +97,28 @@ where p.dentistid = $P{DENTISTID}
 	<detail>
 		<band height="15" splitType="Stretch">
 			<textField isStretchWithOverflow="true">
-				<reportElement uuid="d9c08078-0bd0-4cbc-83bb-915a03d0616b" style="Detail" x="0" y="0" width="111" height="15"/>
+				<reportElement uuid="d9c08078-0bd0-4cbc-83bb-915a03d0616b" x="0" y="0" width="111" height="15"/>
 				<textElement>
 					<font fontName="SansSerif" size="10"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$F{name}]]></textFieldExpression>
 			</textField>
 			<textField isStretchWithOverflow="true">
-				<reportElement uuid="a9e5d6cc-fbde-43ee-ab3d-bb2d736d0262" style="Detail" x="111" y="0" width="111" height="15"/>
+				<reportElement uuid="a9e5d6cc-fbde-43ee-ab3d-bb2d736d0262" x="111" y="0" width="111" height="15"/>
 				<textElement>
 					<font fontName="SansSerif" size="10"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$F{surname}]]></textFieldExpression>
 			</textField>
 			<textField isStretchWithOverflow="true" pattern="dd/MM/yyyy  (HH.mm)">
-				<reportElement uuid="4b26801d-7957-4369-adc2-9ab8ab0d157d" style="Detail" x="382" y="0" width="160" height="15"/>
+				<reportElement uuid="4b26801d-7957-4369-adc2-9ab8ab0d157d" x="382" y="0" width="160" height="15"/>
 				<textElement>
 					<font fontName="SansSerif" size="10"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$F{created}]]></textFieldExpression>
 			</textField>
 			<textField isStretchWithOverflow="true" pattern="dd/MM/yyyy  (HH.mm)" isBlankWhenNull="true">
-				<reportElement uuid="4b26801d-7957-4369-adc2-9ab8ab0d157d" style="Detail" x="222" y="0" width="160" height="15"/>
+				<reportElement uuid="4b26801d-7957-4369-adc2-9ab8ab0d157d" x="222" y="0" width="160" height="15"/>
 				<textElement>
 					<font fontName="SansSerif" size="10"/>
 				</textElement>
@@ -139,14 +132,14 @@ where p.dentistid = $P{DENTISTID}
 				<reportElement uuid="9d2b39c5-71a2-4945-9d92-69a720791e52" mode="Opaque" x="0" y="2" width="555" height="13" forecolor="#D0B48E" backcolor="#3E85B5"/>
 			</frame>
 			<textField evaluationTime="Report">
-				<reportElement uuid="20b122bc-0ac0-448d-8442-e85e5431102a" style="Column header" x="54" y="2" width="40" height="13" forecolor="#FFFFFF"/>
+				<reportElement uuid="20b122bc-0ac0-448d-8442-e85e5431102a" x="54" y="2" width="40" height="13" forecolor="#FFFFFF"/>
 				<textElement verticalAlignment="Middle">
 					<font fontName="SansSerif" size="10" isBold="false"/>
 				</textElement>
 				<textFieldExpression><![CDATA[" " + $V{PAGE_NUMBER}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement uuid="5deeeb70-27d7-4df9-ab55-0ee58465d105" style="Column header" x="2" y="2" width="50" height="13" forecolor="#FFFFFF"/>
+				<reportElement uuid="5deeeb70-27d7-4df9-ab55-0ee58465d105" x="2" y="2" width="50" height="13" forecolor="#FFFFFF"/>
 				<textElement textAlignment="Right" verticalAlignment="Middle">
 					<font fontName="SansSerif" size="10" isBold="false"/>
 				</textElement>
@@ -154,4 +147,29 @@ where p.dentistid = $P{DENTISTID}
 			</textField>
 		</band>
 	</pageFooter>
+	<summary>
+		<band height="50">
+			<line>
+				<reportElement uuid="9d1c9141-a1d0-47b4-8620-10232e1ef7eb" x="0" y="3" width="555" height="1"/>
+			</line>
+			<textField>
+				<reportElement uuid="0d9cc4a5-67e0-4711-99c6-2a7b906d0c7a" mode="Opaque" x="94" y="5" width="461" height="20" forecolor="#000000" backcolor="#E4FCFC"/>
+				<textElement textAlignment="Left" verticalAlignment="Middle" rotation="None" markup="none">
+					<font fontName="SansSerif" size="10" isBold="false" isItalic="false" isUnderline="false" isStrikeThrough="false" pdfEncoding="Cp1252" isPdfEmbedded="false"/>
+					<paragraph lineSpacing="Single"/>
+				</textElement>
+				<textFieldExpression><![CDATA[$V{PATIENT_COUNT}]]></textFieldExpression>
+			</textField>
+			<line>
+				<reportElement uuid="5bf2e4b7-d2eb-40b6-9abb-fbd76a99bfb8" x="0" y="26" width="555" height="1"/>
+			</line>
+			<staticText>
+				<reportElement uuid="4b8af4c9-bcd0-4dda-a031-4bf1521f1a5a" mode="Opaque" x="0" y="5" width="94" height="20" backcolor="#E4FCFC"/>
+				<textElement verticalAlignment="Middle">
+					<font fontName="SansSerif"/>
+				</textElement>
+				<text><![CDATA[Number of Patients :]]></text>
+			</staticText>
+		</band>
+	</summary>
 </jasperReport>
